# Trajectory-Visualization

./: CMakeLists.txt  README.md  make  my_trajectory.csv
data/: trajectory.csv
install/: local_setup.sh  setup.sh
install/trajectory_tools/include/trajectory_tools/: trajectory_reader.hpp  trajectory_reader.txt  trajectory_saver.hpp  trajectory_saver.txt
install/trajectory_tools/include/trajectory_tools/trajectory_tools/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_introspection_c__visibility_control.h
install/trajectory_tools/include/trajectory_tools/trajectory_tools/srv/: save_trajectory.hpp
install/trajectory_tools/include/trajectory_tools/trajectory_tools/srv/detail/: save_trajectory__functions.c  save_trajectory__rosidl_typesupport_introspection_c.h  save_trajectory__rosidl_typesupport_introspection_cpp.hpp  save_trajectory__struct.h  save_trajectory__struct.hpp  save_trajectory__traits.hpp  save_trajectory__type_support.c  save_trajectory__type_support.cpp  save_trajectory__type_support.h
install/trajectory_tools/lib/trajectory_tools/: trajectory_reader_node  trajectory_saver_node
install/trajectory_tools/local/lib/python3.10/dist-packages/trajectory_tools/: _trajectory_tools_s.ep.rosidl_typesupport_fastrtps_c.c
install/trajectory_tools/local/lib/python3.10/dist-packages/trajectory_tools-0.0.1-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/trajectory_tools/local/lib/python3.10/dist-packages/trajectory_tools/srv/: __init__.py  _save_trajectory.py
install/trajectory_tools/share/ament_index/resource_index/parent_prefix_path/: trajectory_tools
install/trajectory_tools/share/trajectory_tools/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/trajectory_tools/share/trajectory_tools/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_trajectory_tools__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_trajectory_tools__rosidl_typesupport_fastrtps_cExport.cmake  export_trajectory_tools__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_trajectory_tools__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  trajectory_tools__rosidl_typesupport_cExport.cmake  trajectory_tools__rosidl_typesupport_cppExport-noconfig.cmake  trajectory_tools__rosidl_typesupport_cppExport.cmake  trajectory_tools__rosidl_typesupport_introspection_cExport-noconfig.cmake  trajectory_tools__rosidl_typesupport_introspection_cppExport.cmake
install/trajectory_tools/share/trajectory_tools/srv/: SaveTrajectory.idl  SaveTrajectory.srv
log/: latest_build
src/: f_reader.txt  f_saver.txt  main_reader.cpp  main_saver.cpp  make_f  trajectory_reader.cpp  trajectory_reader.txt  trajectory_saver.cpp  trajectory_saver.txt
